@@ -20,12 +20,7 @@ Depends:
     odbc,
     XML,
     utils,
-    dismo,
-    gstat,
-    raster,
     plyr,
-    methods,
-    sp,
     EGRET,
     EGRETci,
     doParallel,
