@@ -19,7 +19,6 @@ export(getDFE)
 export(getParams_DFE)
 export(getStn_DFE)
 export(getStns_EDEN)
-export(interp)
 export(mapLists)
 export(procDERM)
 export(replaceBDLs)
@@ -41,37 +40,17 @@ importFrom(XML,htmlParse)
 importFrom(XML,readHTMLTable)
 importFrom(XML,saveXML)
 importFrom(XML,xpathSApply)
-importFrom(dismo,voronoi)
 importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(grDevices,colorRampPalette)
-importFrom(grDevices,dev.off)
-importFrom(grDevices,png)
-importFrom(grDevices,terrain.colors)
-importFrom(graphics,par)
-importFrom(graphics,plot)
-importFrom(gstat,fit.variogram)
-importFrom(gstat,gstat)
-importFrom(gstat,variogram)
 importFrom(httr,GET)
 importFrom(httr,timeout)
 importFrom(httr,write_disk)
-importFrom(methods,as)
 importFrom(odbc,dbConnect)
 importFrom(odbc,dbDisconnect)
 importFrom(parallel,stopCluster)
 importFrom(plyr,ddply)
 importFrom(plyr,summarise)
-importFrom(raster,aggregate)
-importFrom(raster,extent)
-importFrom(raster,plot)
-importFrom(raster,predict)
-importFrom(raster,raster)
-importFrom(raster,writeRaster)
-importFrom(sp,over)
-importFrom(sp,proj4string)
-importFrom(sp,spTransform)
-importFrom(stats,complete.cases)
 importFrom(stats,ecdf)
 importFrom(stats,mad)
 importFrom(stats,median)
