@@ -22,9 +22,10 @@
 #' @name bnp
 #' @usage bnp
 #' @examples 
-#' plot(bnp)
+#' 
 #' 
 #' \dontrun{
+#' plot(bnp)
 #' ### code used to generate object
 #' shp <- "/opt/physical/troy/ESRIDATA/enp_boundary_line/PublicLandsBoundary.shp"
 #'      # "/opt/physical/troy/ESRIDATA/BNP_boundary.shp"
