@@ -2,21 +2,6 @@ context("test-sfnrc")
 library(SFNRC)
 
 
-test_that("interp runs", {
-  a <- plyr::join_all(list(finDat, as.data.frame(masterCoords)));
-  a <- a[!is.na(a$long), ]
-  coordinates(a) <- c("long", "lat")
-  proj4string(a) <- CRS("+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0")
-  
-  a.interp <- interp(inputData = a, by = "stn", returnRas = TRUE, plotZLims = c(0, 10),
-                     paramCol = "value", year = "2016")
-  
-  expect_true(typeof(a.interp) == "S4")
-  expect_true(typeof(interp(inputData = a, by = "stn", returnRas = TRUE,
-                            interpMethod = "nearest neighbor",
-                            paramCol = "value", year = "2016")) == "S4")
-})
-
 
 test_that("se gives correct output", { 
   expect_equal(se(c(5, 5, 5, NA)), 0)
